--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "builds": [
-    { "src": "dist/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
